[package]
name = "aoc2023"
authors = ["@maxtamoian Maks Tamoian"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "day1/main.rs"

[[bin]]
name = "day2"
path = "day2/main.rs"

[[bin]]
name = "day3"
path = "day3/main.rs"

[[bin]]
name = "day4"
path = "day4/main.rs"

[[bin]]
name = "day6"
path = "day6/main.rs"
