[package]
name = "aoc2023"
authors = ["@maxtamoian Maks Tamoian"]
version = "0.1.0"
edition = "2021"

[lib]
name = "aoclib"
path = "aoclib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "day1"
path = "day1/main.rs"

[[bin]]
name = "day2"
path = "day2/main.rs"

[[bin]]
name = "day3"
path = "day3/main.rs"

[[bin]]
name = "day4"
path = "day4/main.rs"

[[bin]]
name = "day5"
path = "day5/main.rs"

[[bin]]
name = "day6"
path = "day6/main.rs"

[[bin]]
name = "day7"
path = "day7/main.rs"

[[bin]]
name = "day9"
path = "day9/main.rs"

[[bin]]
name = "day11"
path = "day11/main.rs"

[[bin]]
name = "day15"
path = "day15/main.rs"

[[bin]]
name = "day16"
path = "day16/main.rs"
