[package]
name = "aoc2023"
authors = ["@maxtamoian Maks Tamoian"]
version = "0.1.0"
edition = "2021"

[lib]
name = "aoclib"
path = "aoclib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "day01"
path = "day01/main.rs"

[[bin]]
name = "day02"
path = "day02/main.rs"

[[bin]]
name = "day03"
path = "day03/main.rs"

[[bin]]
name = "day04"
path = "day04/main.rs"

[[bin]]
name = "day05"
path = "day05/main.rs"

[[bin]]
name = "day06"
path = "day06/main.rs"

[[bin]]
name = "day07"
path = "day07/main.rs"

[[bin]]
name = "day09"
path = "day09/main.rs"

[[bin]]
name = "day11"
path = "day11/main.rs"

[[bin]]
name = "day15"
path = "day15/main.rs"

[[bin]]
name = "day16"
path = "day16/main.rs"
